--- a/sec-2-social/index.html
+++ b/sec-2-social/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Web Social</title>
-        <link rel="stylesheet" href="css/style.css" />  
+        <link rel="stylesheet" href="style.css" />  
         <link rel="short icon" href="favicon.png" />
         <!-- fon awesome -->
         <!-- <link rel="stylesheet" href="css/fontawesome/css/all.css" />    -->
