--- a/sec-6-video/index.html
+++ b/sec-6-video/index.html
@@ -4,13 +4,376 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VideoTube</title>
     <link rel="stylesheet" href="style.css">
-    <!-- <link rel="stylesheet" href="fontawesome/css/all.css"> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="shortcut icon" href="favi2.png">
+    <link rel="shortcut icon" href="favi2.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+    <title>VidTube Project</title>
 </head>
 <body>
-    
+    <main>
+        <!---------------- menu---------------- -->
+        <nav >
+            <div class="nav-container">
+                <a href="#">
+                    <span class="material-icons icons">home</span>
+                    <span class="hide">Home</span>
+                </a>
+                <a href="#">
+                    <span class="material-icons icons">queue</span>
+                    <span class="hide">Create</span>
+                </a>
+                <a href="#">
+                    <span class="material-icons icons">slideshow</span>
+                    <span class="hide">Your Videos</span>
+                </a>
+                <a href="#">
+                    <span class="material-icons icons">video_library</span>
+                    <span class="hide">Library</span>
+                </a>
+                <div class="line"></div>
+                <a href="#">
+                    <span class="material-icons icons">history</span>
+                    <span class="hide">History</span>
+                </a>
+                <a href="#">
+                    <span class="material-icons icons">add_circle_outline</span>
+                    <span class="hide">Channels</span>
+                </a>
+                <a href="#">
+                    <span class="material-icons icons">add_to_drive</span>
+                    <span class="hide">From Drive</span>
+                </a>
+                <a href="#">
+                    <span class="material-icons icons">delete</span>
+                    <span class="hide">Delete</span>
+                </a>
+                <div class="line"></div>
+                <a href="#">
+                    <span class="material-icons icons">video_chat</span>
+                    <span class="hide">Video Chat</span>
+                </a>
+                <a href="#">
+                    <span class="material-icons icons">shop_two</span>
+                    <span class="hide">Subscription</span>
+                </a>
+                <a href="#">
+                    <img src="images/1a.jpg" alt="">
+                    <span class="hide">PamchVid</span>
+                </a>
+            </div>
+        </nav>
+        <div class="container lineaborde_b">
+           <header class="">
+                <div class="top-trends">
+                    <a href="#" class="trends all">All</a>
+                    <a href="#" class="trends">News</a>
+                    <a href="#" class="trends">Trending</a>
+                    <a href="#" class="trends">Live Videos</a>
+                    <a href="#" class="trends">Premier League</a>
+                    <a href="#" class="trends">La Liga</a>
+                    <a href="#" class="trends">Programmers</a>
+                </div>
+           </header> 
+           <section class="cover-image">
+           </section>
+           <div class="wrap content lineaborde_C">
+                <!--Video 1-->
+                <article class="lineaborde_d">
+                    <div class="video-aside">
+                        <video src="images/joy.mp4" controls poster="images/22.jpg"></video>
+                        <span class="time">2:42:30</span>
+                    </div>
+                    <div class="poster">
+                        <div>
+                            <img src="images/4.jpg" alt="">
+                        </div>
+                        <div class="text">
+                            <h4>Celine Dion's Top 35 Hit Songs from the 80s</h4>
+                            <p>Celine Dion</p>
+                            <p>579k Views . 3 days ago</p>
+                        </div>
+                    </div>
+                </article>
+                <!--video 2-->
+                <article>
+                    <div class="video-aside">
+                        <video src="images/joy.mp4" controls poster="images/20.jpg"></video>
+                        <span class="time">1:40:00</span>
+                    </div>
+                    <div class="poster">
+                        <div>
+                            <img src="images/21.jpg" alt="">
+                        </div>
+                        <div class="text">
+                            <h4>Jonah Baker - 20 Most Loved Acoustic Covers</h4>
+                            <p>Jonah Baker</p>
+                            <p>1.4M Views . 3 days ago</p>
+                        </div>
+                    </div>
+                </article>
+                <!--video 3-->
+                <article>
+                    <div class="video-aside">
+                        <video src="images/joy.mp4" controls poster="images/19.jpg"></video>
+                        <span class="time">00:45:00</span>
+                    </div>
+                    <div class="poster">
+                        <div>
+                            <img src="images/20.jpg" alt="">
+                        </div>
+                        <div class="text">
+                            <h4>Falling in Love with Jesus - Kirk Whalum/Jonathan Butler</h4>
+                            <p>Jonathan Butler</p>
+                            <p>6.7M Views . 3 days ago</p>
+                        </div>
+                    </div>
+                </article>
+                <!--video 4-->
+                <article>
+                    <div class="video-aside">
+                        <video src="images/joy.mp4" controls poster="images/18.jpg"></video>
+                        <span class="time">1:30:40</span>
+                    </div>
+                    <div class="poster">
+                        <div>
+                            <img src="images/15.jpg" alt="">
+                        </div>
+                        <div class="text">
+                            <h4>No Woman, No Cry - Jonathan Butler</h4>
+                            <p>Jonathan Butler</p>
+                            <p>16.7M Views . 3 days ago</p>
+                        </div>
+                    </div>
+                </article>
+                  <!--video 5-->
+                  <article>
+                    <div class="video-aside">
+                        <video src="images/joy.mp4" controls poster="images/1.jpg"></video>
+                        <span class="time">00:07:40</span>
+                    </div>
+                    <div class="poster">
+                        <div>
+                            <img src="images/13.jpg" alt="">
+                        </div>
+                        <div class="text">
+                            <h4>Emmanuel - Hillsong</h4>
+                            <p>Hillsong</p>
+                            <p>24.2M Views . 3 days ago</p>
+                        </div>
+                    </div>
+                </article>
+                <!--Video 6-->
+                <article>
+                    <div class="video-aside">
+                        <video src="images/joy.mp4" controls poster="images/1a.jpg"></video>
+                        <span class="time">01:47:00</span>
+                    </div>
+                    <div class="poster">
+                        <div>
+                            <img src="images/10.jpg" alt="">
+                        </div>
+                        <div class="text">
+                            <h4>Man Utd vs Man City</h4>
+                            <p>FA Cup</p>
+                            <p>24.2M Views . 3 days ago</p>
+                        </div>
+                    </div>
+                </article>
+           </div>
+           <!----------------- Short videos -------------------->
+           <p class="block lineaborde_a">
+             <span class="material-icons icons">smart_display</span>
+             Shorts
+           </p>
+           
+           <div class="shorts content">
+                <!--short video 1-->
+                <article>
+                    <div class="short-story">
+                        <video src="images/joy.mp4" controls poster="images/4.jpg"></video>
+                    </div>
+                    <div>
+                        <div class="text">
+                            <h4>Baker's guide😍🤩</h4>
+                            <p>Baker</p>
+                            <p>2.2M Views</p>
+                        </div>
+                    </div>
+                </article>
+                <!--short video 2-->
+                <article>
+                    <div class="short-story">
+                        <video src="images/joy.mp4" controls poster="images/11.jpg"></video>
+                    </div>
+                    <div>
+                        <div class="text">
+                            <h4>Funny husky😍🤩</h4>
+                            <p>husky</p>
+                            <p>679k Views</p>
+                        </div>
+                    </div>
+                </article>
+                <!--short video 3-->
+                <article>
+                    <div class="short-story">
+                        <video src="images/joy.mp4" controls poster="images/2.jpg"></video>
+                    </div>
+                    <div>
+                        <div class="text">
+                            <h4>Cool Dance steps🤩</h4>
+                            <p>Dance</p>
+                            <p>1.4M Views</p>
+                        </div>
+                    </div>
+                </article>
+                <!--short video 4-->
+                <article>
+                    <div class="short-story">
+                        <video src="images/joy.mp4" controls poster="images/5.jpg"></video>
+                    </div>
+                    <div>
+                        <div class="text">
+                            <h4>Card tricks</h4>
+                            <p>Tricks</p>
+                            <p>4M Views</p>
+                        </div>
+                    </div>
+                </article>
+                <!--short video 5-->
+                <article>
+                    <div class="short-story">
+                        <video src="images/joy.mp4" controls poster="images/7.jpg"></video>
+                    </div>
+                    <div>
+                        <div class="text">
+                            <h4>Lands for sale</h4>
+                            <p>Sales</p>
+                            <p>350k Views</p>
+                        </div>
+                    </div>
+                </article>
+                <!--short video 6-->
+                <article>
+                    <div class="short-story">
+                        <video src="images/joy.mp4" controls poster="images/9.jpg"></video>
+                    </div>
+                    <div>
+                        <div class="text">
+                            <h4>Tech beauty😍🤩</h4>
+                            <p>Pamchtutors</p>
+                            <p>11.6M Views</p>
+                        </div>
+                    </div>
+                </article>
+           </div>
+           <div class="line-shorts">zzzzzzzzzzzzzzz</div>
+           <div class="wrap content">
+                <!--Video 1-->
+                <article>
+                     <div class="video-aside">
+                        <video src="images/joy.mp4" controls poster="images/22.jpg"></video>
+                        <span class="time">2:42:30</span>
+                    </div>
+                    <div class="poster">
+                        <div>
+                            <img src="images/4.jpg" alt="">
+                        </div>
+                        <div class="text">
+                            <!-- <h4>Celine Dion's Top 35 Hit Songs from the 80s</h4> -->
+                            <!-- <p>Celine Dion</p>  -->
+                            <!-- <p>579k Views . 3 days ago</p> -->
+                        </div> 
+                    </div> 
+                </article>
+                 <!--video 2-->
+                 <article>
+                    <div class="video-aside">
+                        <video src="images/joy.mp4" controls poster="images/20.jpg"></video>
+                        <span class="time">1:40:00</span>
+                    </div>
+                    <div class="poster">
+                        <div>
+                            <img src="images/21.jpg" alt="">
+                        </div>
+                        <div class="text">
+                            <h4>Jonah Baker - 20 Most Loved Acoustic Covers</h4>
+                            <p>Jonah Baker</p>
+                            <p>1.4M Views . 3 days ago</p>
+                        </div>
+                    </div>
+                </article>
+                <!--video 3-->
+                <article>
+                    <div class="video-aside">
+                        <video src="images/joy.mp4" controls poster="images/19.jpg"></video>
+                        <span class="time">00:45:00</span>
+                    </div>
+                    <div class="poster">
+                        <div>
+                            <img src="images/20.jpg" alt="">
+                        </div>
+                        <div class="text">
+                            <h4>Falling in Love with Jesus - Kirk Whalum/Jonathan Butler</h4>
+                            <p>Jonathan Butler</p>
+                            <p>6.7M Views . 3 days ago</p>
+                        </div>
+                    </div>
+                </article>
+                <!--video 4-->
+                <article>
+                    <div class="video-aside">
+                        <video src="images/joy.mp4" controls poster="images/18.jpg"></video>
+                        <span class="time">1:30:40</span>
+                    </div>
+                    <div class="poster">
+                        <div>
+                            <img src="images/15.jpg" alt="">
+                        </div>
+                        <div class="text">
+                            <h4>No Woman, No Cry - Jonathan Butler</h4>
+                            <p>Jonathan Butler</p>
+                            <p>16.7M Views . 3 days ago</p>
+                        </div>
+                    </div>
+                </article>
+                <!--video 5-->
+                <article>
+                    <div class="video-aside">
+                        <video src="images/joy.mp4" controls poster="images/1.jpg"></video>
+                        <span class="time">00:07:40</span>
+                    </div>
+                    <div class="poster">
+                        <div>
+                            <img src="images/13.jpg" alt="">
+                        </div>
+                        <div class="text">
+                            <h4>Emmanuel - Hillsong</h4>
+                            <p>Hillsong</p>
+                            <p>24.2M Views . 3 days ago</p>
+                        </div>
+                    </div>
+                </article>
+                <!--Video 6-->
+                <article>
+                    <div class="video-aside">
+                        <video src="images/joy.mp4" controls poster="images/1a.jpg"></video>
+                        <span class="time">01:47:00</span>
+                    </div>
+                    <div class="poster">
+                        <div>
+                            <img src="images/10.jpg" alt="">
+                        </div>
+                        <div class="text">
+                            <h4>Man Utd vs Man City</h4>
+                            <p>FA Cup</p>
+                            <p>24.2M Views . 3 days ago</p>
+                        </div>
+                    </div>
+                </article>
+           </div>
+        </div>
+    </main>
+    <!--<span class="material-icons">face</span>-->
 </body>
 </html>
