--- a/sec-6-video/index.html
+++ b/sec-6-video/index.html
@@ -63,7 +63,7 @@
                 </a>
             </div>
         </nav>
-        <div class="container lineaborde_b">
+        <div class="container">
            <header class="">
                 <div class="top-trends">
                     <a href="#" class="trends all">All</a>
@@ -77,9 +77,9 @@
            </header> 
            <section class="cover-image">
            </section>
-           <div class="wrap content lineaborde_C">
+           <div class="wrap content">
                 <!--Video 1-->
-                <article class="lineaborde_d">
+                <article class="">
                     <div class="video-aside">
                         <video src="images/joy.mp4" controls poster="images/22.jpg"></video>
                         <span class="time">2:42:30</span>
@@ -182,7 +182,7 @@
                 </article>
            </div>
            <!----------------- Short videos -------------------->
-           <p class="block lineaborde_a">
+           <p class="block ">
              <span class="material-icons icons">smart_display</span>
              Shorts
            </p>
@@ -267,7 +267,7 @@
                     </div>
                 </article>
            </div>
-           <div class="line-shorts">zzzzzzzzzzzzzzz</div>
+           <div class="line-shorts"></div>
            <div class="wrap content">
                 <!--Video 1-->
                 <article>
@@ -374,6 +374,6 @@
            </div>
         </div>
     </main>
-    <!--<span class="material-icons">face</span>-->
+   
 </body>
 </html>
