--- a/sec-8-cv/index.html
+++ b/sec-8-cv/index.html
@@ -11,5 +11,209 @@
     <title>Online CV</title>
 </head>
 <body>
+    <section class="flex-container">
+        <!--first aside-->
+        <aside class="flex-1 lineaborde_a">
+            <div class="profile-pix">
+                <img src="images/1a.jpg" alt="profile picture">
+            </div>
+             <!--profile icons-->
+             <div class="profile-icons">
+                <h5 id="head-main">
+                    <i class="fa-solid fa-circle-user" id="f-icons"></i>
+                    Profile
+                </h5>
+                <h5 id="h-5">
+                    <i class="fa-solid fa-user" id="f-icons"></i>
+                    PAMCH Tutors
+                </h5>
+                <h5 id="h-5">
+                    <i class="fa-solid fa-briefcase" id="f-icons"></i>
+                    Web Developer
+                </h5>
+                <h5 id="h-5">
+                    <i class="fa-solid fa-street-view" id="f-icons"></i>
+                    Epping, Victoria 3076, Australia
+                </h5>
+                <h5 id="h-5">
+                    <i class="fa-solid fa-envelope" id="f-icons"></i>
+                   pamch@abc.com
+                </h5>
+                <h5 id="h-5">
+                    <i class="fa-solid fa-phone" id="f-icons"></i>
+                    44356790
+                </h5>
+            </div>
+            <!--Skills-->
+            <div class="skills-container">
+                <h5 id="head-main">
+                    <i class="fa-solid fa-pen-nib" id="f-icons"></i>
+                    Skills
+                </h5>
+                <!--skills 1-->
+                <h5 id="h-5">Graphics Designer</h5>
+                <div class="width-full">
+                    <div class="width-95"> 95% </div>
+                </div>
+                <!--skills 2-->
+                <h5 id="h-5">AI Algorithm</h5>
+                <div class="width-full">
+                    <div class="width-90"> 90% </div>
+                </div>
+                <!--skills 3-->
+                <h5 id="h-5">Back End Developer</h5>
+                <div class="width-full">
+                    <div class="width-95"> 95% </div>
+                </div>
+                <!--skills 4-->
+                <h5 id="h-5">Front End Developer</h5>
+                <div class="width-full">
+                    <div class="width-90"> 90% </div>
+                </div>
+                <!--skills 5-->
+                <h5 id="h-5">Data Analyst</h5>
+                <div class="width-full">
+                    <div class="width-95"> 95% </div>
+                </div>
+            </div>
+            <!--Language-->
+            <div class="skills-container">
+                <h5 id="head-main">
+                    <i class="fa-solid fa-language" id="f-icons"></i>
+                    Language
+                </h5>
+                <!--Lang 1-->
+                <h5 id="h-5">English</h5>
+                <div class="width-full">
+                    <div class="width-95"> 95% </div>
+                </div>
+                <!--Lang 2-->
+                <h5 id="h-5">Spanish</h5>
+                <div class="width-full">
+                    <div class="width-75"> 75% </div>
+                </div>
+                <!--Lang 3-->
+                <h5 id="h-5">German</h5>
+                <div class="width-full">
+                    <div class="width-55"> 55% </div>
+                </div>
+            </div>
+            <!--Social icons-->
+            <div class="skills-container">
+                <h5 id="head-main">
+                    <i class="fa-solid fa-thumbs-up" id="f-icons"></i>
+                    Follow Me
+                </h5>
+                <div class="social-icons">
+                    <a href="#">
+                        <i class="fa-brands fa-twitter"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-tiktok"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-youtube"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                </div>
+            </div>
+
+        </aside>
+        <!--second aside-->
+        <aside class="flex-2 lineaborde_b">
+            <!--working experience-->
+            <div class="first m-b">
+                <div class="projects">
+                    <h1 id="h-1">
+                        <i class="fa-solid fa-building"></i>
+                        Work Experience
+                    </h1>
+                </div>
+                <!--Work text 1-->
+                <div class="text-items">
+                    <h2>
+                        <i class="fa-solid fa-award"></i>
+                        Front End Developer (Amazon)
+                    </h2>
+                    <h3>
+                        <i class="fa-solid fa-calendar-days"></i>
+                        June 2027 -  <span class="date">Current Date</span>
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.
+                    </p>
+                </div>
+                <!--Work text 2-->
+                <div class="text-items">
+                    <h2>
+                        <i class="fa-solid fa-award"></i>
+                        Back End Developer (Apple)
+                    </h2>
+                    <h3>
+                        <i class="fa-solid fa-calendar-days"></i>
+                        April 2025 - April 2027
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.
+                    </p>
+                </div>
+                <!--Work text 3-->
+                <div class="text-items">
+                    <h2>
+                        <i class="fa-solid fa-award"></i>
+                        Graphic Designer (Meta)
+                    </h2>
+                    <h3>
+                        <i class="fa-solid fa-calendar-days"></i>
+                        August 2023 - February 2025
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.
+                    </p>
+                </div>
+                <!--Work text 4-->
+                <div class="text-items">
+                    <h2>
+                        <i class="fa-solid fa-award"></i>
+                        App Manager (Microsoft)
+                    </h2>
+                    <h3>
+                        <i class="fa-solid fa-calendar-days"></i>
+                        May 2020 - May 2023
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.
+                    </p>
+                </div>
+            </div>
+            <!--education-->
+            <div class="first m-b">
+            </div>
+             <!--portfolio-->
+             <div class="first m-b">
+             </div>
+             <!--pricing-->
+            <div class="first m-b">
+
+            </div>
+            <!--contacts-->
+            <div class="first m-b">
+
+            </div>
+            <!--map-->
+            <div class="first"> 
+
+            </div>
+        </aside>
+
+    </section>
 </body>
 </html>
