--- a/sec-4-corporate/index-3.html
+++ b/sec-4-corporate/index-3.html
@@ -4,53 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style-finish.css">
+    <link rel="stylesheet" href="index-3.css">
     <link rel="shortcut icon" href="favi2.png">
     <!-- <link rel="stylesheet" href="fontawesome/css/all.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>PAMCHTutors || Conglomerate</title>   
 </head>
 <body>
-    <!--Navigation and Slider-->
-    <main class="main-head">
-        <!--Navigation-->
-        <nav class="navbar">
-            <!--logo-->
-            <div class="logo">PAMCHTutors</div>
-            <!--Nav menu-->
-            <ul class="nav-links">
-                <!--checkbox hack-->
-                <input type="checkbox" id="toggle">
-                <label for="toggle" class="hamburger">&#9776;</label>
-                <!--menu-->
-                <div class="menu">
-                    <li> <a href="#">Home</a> </li>
-                    <li> <a href="#">About</a> </li>
-                    <li> <a href="#">Services</a> </li>
-                    <li> <a href="#">Pricing</a> </li>
-                    <li> <a href="#">Contact</a> </li>
-                </div>
-            </ul>
-        </nav>
-        <!--Slider-->
-        <header class="main-slider">
-            <!--Dots-->
-            <div class="menu-dots">
-                <label for="slide-dot-1"></label>
-                <label for="slide-dot-2"></label>
-                <label for="slide-dot-3"></label>
-            </div>
-            <!--picture 1-->
-            <input type="radio" id="slide-dot-1" name="slides" checked>
-            <div class="slide slide-1"></div>
-            <!--picture 2-->
-            <input type="radio" id="slide-dot-2" name="slides">
-            <div class="slide slide-2"></div>
-            <!--picture 3-->
-            <input type="radio" id="slide-dot-3" name="slides">
-            <div class="slide slide-3"></div>
-        </header>
-    </main>
+    
+
 
     <!--Whole Page layout-->
     <section class="page-container">
@@ -185,26 +147,8 @@
             </p>
         </article>
     </section>
-    <!--Footer-->
-    <footer class="footer">
-        <div class="contents">
-            <div class="logo">PAMCHTutors</div>
-            <div>
-                <p> <a href="#">Our History</a> </p>
-                <p> <a href="#">About Us</a> </p>
-                <p> <a href="#">Our Team</a> </p>
-            </div>
-            <div>
-                <p> <a href="#">Contact Us</a> </p>
-                <p> <a href="#">Board</a> </p>
-                <p> <a href="#">Schedule</a> </p>
-            </div>
-            <div class="icons-footer">
-                <a href="#"> <i class="fab fa-instagram"></i> </a>
-                <a href="#"> <i class="fab fa-youtube"></i> </a>
-                <a href="#"> <i class="fab fa-tiktok"></i> </a>
-            </div>
-        </div>
-    </footer>
+
+   
+    
 </body>
 </html>
