--- a/sec-6-video/index.html
+++ b/sec-6-video/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Index.css">
     <link rel="shortcut icon" href="favi2.png" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>VidTube Project</title>
+
 </head>
 <body>
+    
     <main>
         <!---------------- menu---------------- -->
         <nav >
@@ -63,6 +64,7 @@
                 </a>
             </div>
         </nav>
+
         <div class="container">
            <header class="">
                 <div class="top-trends">
@@ -373,6 +375,7 @@
                 </article>
            </div>
         </div>
+        
     </main>
    
 </body>
